Add navigation style, create ID menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,3 +20,12 @@ h1, h2 {
     float: left;
     font-size: 280%;
 }
+#menu {
+    font-size: 110%;
+    letter-spacing: 4px;
+}
+#menu li {
+    float: right;
+    list-style-type: none;
+    margin-right: 30px;
+}
