--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ h1, h2 {
     padding-top: 30px;
     width: 33%;
     float:right;  
-    background-color: silver;
+    
 }
 #center-about {
     width: 33%;
@@ -126,5 +126,16 @@ hr {
     margin-bottom: 50px;
     clear: both;
 }
-
-
+.right-about-heading{
+    width: 60%;
+    float: left;
+    line-height: 20px;
+    margin-bottom: 50px;
+    clear: both;
+}
+.right-about-heading h2 {
+    text-align: right;
+}
+.right-about-heading p {
+    text-align: right;
+}
