--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,7 +209,7 @@ footer {
 /* Media queries */
 /* For larger to medium screens size from 1200px wide and down */
 
-@media screen and (max-width: 1200px {
+@media screen and (max-width: 1200px) {
     #club-ethos {
         width: 65%;
         height: 1200px;
@@ -219,7 +219,7 @@ footer {
         padding: 30px 0;
         margin: 0;
     }
-    #left-about, right-about {
+    #left-about, #right-about {
         width: 100%;
         float: left;
         padding: 0;
@@ -232,6 +232,17 @@ footer {
     }
     hr {
         display: none;
+    }
+    
+}
+/* For medium screen size from 950px wide and down */
+@media screen and (max-width: 950px) {
+    #menu {
+        clear: left;
+        float: left;
+        margin-left: 30px;
+        margin-bottom: 20px;
+        line-height: 25px;
     }
     
 }
