--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,6 +230,12 @@ footer {
         float: left;
         padding: 0;
     }
+    #times > div {
+        width: 100%;
+        clear: both;
+        height: 150px;
+        padding: 0;
+    }
     hr {
         display: none;
     }
