--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,4 +269,14 @@ footer {
         text-align: center;
         padding: 0 auto;
     }
+    #photos {
+        column-count: 3;
+    }
+}
+/* For small screen sizes 800px and down */
+@media screen and (max-width: 800px) {
+    #photos {
+        column-count: 2;
+    }
+    
 }
